--- a/flask-api/templates/register.html
+++ b/flask-api/templates/register.html
@@ -12,6 +12,10 @@
                     <label for="exampleInputPassword1">Password</label>
                     <input type="password" class="form-control" name="pass" placeholder="Password">
                 </div>
+                <div class="form-group">
+                    <label for="exampleInputEmail1">Role</label>
+                    <input type="text" class="form-control" name="role" placeholder="Role">
+                </div>
                 <button type="submit" class="btn btn-primary btn-block">Register</button>
             </form>
             <br>
