--- a/flask-api/templates/assignDevice.html
+++ b/flask-api/templates/assignDevice.html
@@ -1,16 +1,27 @@
 {% extends "layout.html" %}
 {% block body %} 
 <div class="container">
+    <div class="navbar">
+        <a href="{{ url_for('home', role=session['role']) }}">Home</a>
+    </div>
     <div class="row">
         <div class="col-md-4 col-md-offset-4">
             <form method=POST action="{{ url_for('assign_device') }}">
-                <div class="form-group">
+                <div class="dropdown">
                     <label for="exampleInputEmail1">Assign Device</label>
-                    <input type="text" class="form-control" name="assignDevice" placeholder="Name"> 
+                    <select name="mps">
+                        {% for device in devices %}
+                        <option value="{{device}}">{{device}}</option>
+                        {% endfor %}
+                    </select>
                 </div>
-                <div class="form-group">
+                <div class="dropdown">
                     <label for="exampleInputEmail1">To Patient</label>
-                    <input type="text" class="form-control" name="assignPatient" placeholder="Name">
+                    <select name="patients">
+                        {% for patient in patients %}
+                        <option value="{{patient}}">{{patient}}</option>
+                        {% endfor %}
+                    </select>
                 </div>
                 <button type="submit" class="btn btn-primary btn-block">Assign</button>
             </form>
@@ -19,4 +30,6 @@
     </div>
 </div>
 {% endblock %}
+
+
 
