--- a/flask-api/templates/assignPatients.html
+++ b/flask-api/templates/assignPatients.html
@@ -1,18 +1,14 @@
 {% extends "layout.html" %}
 {% block body %} 
 <div class="container">
+    <div class="navbar">
+        <a href="{{ url_for('home', role=session['role']) }}">Home</a>
+    </div>
     <div class="row">
         <div class="col-md-4 col-md-offset-4">
             <form method=POST action="{{ url_for('assign_patients') }}">
                 <div class="dropdown">
                     <label for="exampleInputEmail1">Assign MP</label>
-                    <!-- <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">MPS
-                    <span class="caret"></span></button>
-                    <ul class="dropdown-menu" id="mp" name="assignPatient" >
-                        {% for mp in mps %}
-                        <li><a href="#">{{mp}}</a></li>
-                        {% endfor %}
-                    </ul> -->
                     <select name="mps">
                         {% for mp in mps %}
                         <option value="{{mp}}">{{mp}}</option>
