--- a/flask-api/templates/dataPush.html
+++ b/flask-api/templates/dataPush.html
@@ -1,21 +1,30 @@
 {% extends "layout.html" %}
 {% block body %} 
 <div class="container">
+    <div class="navbar">
+        <a href="{{ url_for('home', role=session['role']) }}">Home</a>
+    </div>
     <div class="row">
         <div class="col-md-4 col-md-offset-4">
             <form method=POST action="{{ url_for('data_push') }}">
-                <div class="form-group">
-                    <label for="exampleInputEmail1">Device ID</label>
-                    <input type="text" class="form-control" name="device_id" placeholder="Device ID"> 
+                <div class="dropdown">
+                    <label for="exampleInputEmail1">Choose Device</label>
+                    <select name="mps">
+                        {% for device in devices %}
+                        <option value="{{device}}">{{device}}</option>
+                        {% endfor %}
+                    </select>
                 </div>
                 <div class="form-group">
-                    <label for="exampleInputEmail1">Device Type</label>
-                    <input type="text" class="form-control" name="device_type" placeholder="Device type">
+                    <label for="exampleInputEmail1">Patient Name</label>
+                    <input type="text" class="form-control" name="patient_name" placeholder="Patient Name">
                 </div>
-                <div class="form-group">
-                    <label for="exampleInputEmail1">User ID</label>
-                    <input type="text" class="form-control" name="user_id" placeholder="User ID">
-                </div>
+                <!-- <div class="dropdown">
+                    <label for="exampleInputEmail1">Choose Patient</label>
+                    <select name="mps">
+                        <option value="{{patient}}">{{patient}}</option>
+                    </select>
+                </div> -->
                 <div class="form-group">
                     <label for="exampleInputEmail1">Measurement</label>
                     <input type="text" class="form-control" name="measurement" placeholder="Measurement">
