--- a/flask-api/templates/home.html
+++ b/flask-api/templates/home.html
@@ -4,14 +4,17 @@
     <div class="row">
         <div class="col-md-4 col-md-offset-4">
             <!-- Admin tasks -->
-            {% if user%}
+            {% if user=='admin'%}
             <div>
                 <a href="{{ url_for('register_device') }}">Register a device</a>
             </div>
             <div>
                 <a href="{{ url_for('assign_patients') }}">Assign Patients</a>
             </div>
-            {% elif user==mp%}
+            <div>
+                <a href="{{ url_for('logout') }}">Log Out</a>
+            </div>
+            {% elif user=='mp'%}
             <!-- MP tasks -->
             <div>
                 <a href="{{ url_for('assign_device') }}">Assign Device</a>
@@ -19,10 +22,16 @@
             <div>
                 <a href="{{ url_for('data_push') }}">Add Data</a>
             </div>
-            {% elif user==patient%}
+            <div>
+                <a href="{{ url_for('logout') }}">Log Out</a>
+            </div>
+            {% elif user=='patient'%}
             <!-- Patient tasks -->
             <div>
                 <a href="{{ url_for('data_push') }}">Add Data</a>
+            </div>
+            <div>
+                <a href="{{ url_for('logout') }}">Log Out</a>
             </div>
             {% endif %}
         </div>
