--- a/flask-api/templates/register.html
+++ b/flask-api/templates/register.html
@@ -1,6 +1,9 @@
 {% extends "layout.html" %}
 {% block body %} 
 <div class="container">
+    <div class="navbar">
+        <a href="{{ url_for('login') }}">Back to Log In</a>
+    </div>
     <div class="row">
         <div class="col-md-4 col-md-offset-4">
             <form method=POST action="{{ url_for('register') }}">
