--- a/flask-api/templates/registerDevice.html
+++ b/flask-api/templates/registerDevice.html
@@ -9,7 +9,7 @@
             <form method=POST action="{{ url_for('register_device') }}">
                 <div class="form-group">
                     <label for="exampleInputEmail1">Device ID</label>
-                    <input type="text" class="form-control" name="device_id" placeholder="Device ID"> 
+                    <input type="number" class="form-control" name="device_id" placeholder="Device ID"> 
                 </div>
                 <div class="form-group">
                     <label for="exampleInputEmail1">Device Type</label>
