--- a/flask-api/templates/dataPush.html
+++ b/flask-api/templates/dataPush.html
@@ -15,27 +15,39 @@
                         {% endfor %}
                     </select>
                 </div>
-                <div class="form-group">
-                    <label for="exampleInputEmail1">Patient Name</label>
-                    <input type="text" class="form-control" name="patient_name" placeholder="Patient Name">
-                </div>
-                <!-- <div class="dropdown">
+
+                {% if role=='mp'%}
+                <div class="dropdown">
                     <label for="exampleInputEmail1">Choose Patient</label>
-                    <select name="mps">
+                    <select name="patients">
+                        {% for patient in patients %}
                         <option value="{{patient}}">{{patient}}</option>
+                        {% endfor %}
                     </select>
-                </div> -->
+                </div>
                 <div class="form-group">
                     <label for="exampleInputEmail1">Measurement</label>
-                    <input type="text" class="form-control" name="measurement" placeholder="Measurement">
+                    <input type="number" class="form-control" name="measurement" placeholder="Measurement">
                 </div>
                 <div class="form-group">
                     <label for="exampleInputEmail1">Timestamp</label>
-                    <input type="text" class="form-control" name="timestamp" placeholder="timestamp">
+                    <input type="datetime-local" class="form-control" name="timestamp" placeholder="timestamp">
+                </div>
+                <button type="submit" class="btn btn-primary btn-block">Add</button>
+
+                {% elif role=='patient'%}
+                <div class="form-group">
+                    <label for="exampleInputEmail1">Measurement</label>
+                    <input type="number" class="form-control" name="measurement" placeholder="Measurement">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputEmail1">Timestamp</label>
+                    <input type="datetime-local" class="form-control" name="timestamp" placeholder="timestamp">
                 </div>
                 <button type="submit" class="btn btn-primary btn-block">Add</button>
             </form>
             <br>
+            {% endif %}
         </div>
     </div>
 </div>
