--- a/flask-api/templates/register.html
+++ b/flask-api/templates/register.html
@@ -16,8 +16,11 @@
                     <input type="password" class="form-control" name="pass" placeholder="Password">
                 </div>
                 <div class="form-group">
-                    <label for="exampleInputEmail1">Role</label>
-                    <input type="text" class="form-control" name="role" placeholder="Role">
+                    <label for="exampleInputPassword1">Role:</label>
+                    <br>
+                    <input type="radio" name="options" id="option1" value="admin"> Administrator </input><br>
+                    <input type="radio" name="options" id="option2" value="mp"> Medical Professional </input><br>
+                    <input type="radio" name="options" id="option3" value="patient"> Patient </input><br>
                 </div>
                 <button type="submit" class="btn btn-primary btn-block">Register</button>
             </form>
